@@ -2251,8 +2251,8 @@ WIDGET_DEFAULT = {
         "show_position_in_class": True,
         "font_color_player": "#FFFFFF",
         "vehicle_color_player": "#FF4422",
-        "vehicle_outline_player_color": "#AAFFFFFF",
         "vehicle_outline_player_width": 2,
+        "vehicle_outline_player_color": "#AAFFFFFF",
         "font_color": "#000000",
         "vehicle_color_leader": "#88FF00",
         "vehicle_color_same_lap": "#FFFFFF",
@@ -2262,6 +2262,11 @@ WIDGET_DEFAULT = {
         "vehicle_color_yellow": "#FFFF00",
         "vehicle_outline_width": 1,
         "vehicle_outline_color": "#88000000",
+        "show_lap_difference_outline": False,
+        "vehicle_outline_width_laps_ahead": 2,
+        "vehicle_outline_color_laps_ahead": "#FF44CC",
+        "vehicle_outline_width_laps_behind": 2,
+        "vehicle_outline_color_laps_behind": "#00AAFF",
         "show_pitout_prediction": True,
         "show_pitout_prediction_while_requested_pitstop": True,
         "number_of_predication": 6,
